--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
     <title>Document</title>
+   
 </head>
 <body>
-   <h1> Acceuil</h1>
+ <header>
+    <div class="flex justify-between">
+        <img class="image"  src="image/images.jpg" alt="logo">
+        <h1> Développeur Web </h1>
+    
+        <nav>
+        <ul class="flex">
+                <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href=""> <i class="fa-brands fa-square-instagram"></i></a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+    <h2> Non et Prenom : Ben Salah Ibtissem </h2>
+    <h3> Age :28 Ans </h3>
+
+    <h4></h4>
+
+
+
+
+
+   
 </body>
 </html>
